Updated and cleaned up some unneeded code.